Closed
Bug 239644
Opened 22 years ago
Closed 22 years ago
FreeBSD build error in nsHostResolver
Categories
(Core :: Networking, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.7final
People
(Reporter: darin.moz, Assigned: darin.moz)
References
()
Details
(Keywords: fixed1.7)
Attachments
(1 file)
|
7.46 KB,
patch
|
bryner
:
review+
bryner
:
superreview+
asa
:
approval1.7+
|
Details | Diff | Splinter Review |
From n.p.m.unix:
news://news.mozilla.org:119/41c60972.0404041804.4532eda1@posting.google.com
> I'm trying to build mozilla 1.7b (but I have exprienced same error
> with 1.6 and Firebox 0.8) on FreeBSD 5.2.1 for x86.
>
> Any suggestion would be appreciated.
>
> $ cc -v
> Using built-in specs.
> Configured with: FreeBSD/i386 system compiler
> Thread model: posix
> gcc version 3.3.3 [FreeBSD] 20031106
>
> $ c++ -Wall -I/usr/local/include -L/usr/local/lib -o nsDNSService2.o
> -c -DOSTY>
> In file included from nsDNSService2.h:40,
> from nsDNSService2.cpp:37:
> nsHostResolver.h:87: error: syntax error before `*' token
> nsHostResolver.h: In member function `PRBool nsHostRecord::HasResult()
> const':
> nsHostResolver.h:92: error: syntax error before `;' token
> nsHostResolver.h: At global scope:
> nsHostResolver.h:186: error: syntax error before `*' token
> nsDNSService2.cpp: In member function `virtual nsresult
> nsDNSRecord::GetCanonicalName(nsACString&)':
> nsDNSService2.cpp:90: error: invalid use of `struct addrinfo'
> nsDNSService2.cpp:91: error: invalid use of `struct addrinfo'
> nsDNSService2.cpp:91: error: `PR_GetCanonNameFromAddrInfo' undeclared
> (first
> use this function)
> nsDNSService2.cpp:91: error: (Each undeclared identifier is reported
> only once
> for each function it appears in.)
> nsDNSService2.cpp: In member function `virtual nsresult
> nsDNSRecord::GetNextAddr(short unsigned int, PRNetAddr*)':
> nsDNSService2.cpp:107: error: invalid use of `struct addrinfo'
> nsDNSService2.cpp:108: error: invalid use of `struct addrinfo'
> nsDNSService2.cpp:108: error: `PR_EnumerateAddrInfo' undeclared (first
> use this
> function)
> nsDNSService2.cpp: In member function `PRUint16
> nsDNSService::GetAFForLookup(const nsACString&)':
> nsDNSService2.cpp:516: error: `PR_AF_UNSPEC' undeclared (first use
> this
> function)
It looks like naming a variable "addrinfo" is conflicting with the definition of
"struct addrinfo" pulled in from the system headers.
| Assignee | ||
Updated•22 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.7final
| Assignee | ||
Comment 1•22 years ago
|
||
| Assignee | ||
Comment 2•22 years ago
|
||
Comment on attachment 146204 [details] [diff] [review]
v1 patch
this patch just does s/addrinfo/addr_info/ on netwerk/dns/src
Attachment #146204 -
Flags: superreview?(bryner)
Attachment #146204 -
Flags: review?(bryner)
Updated•22 years ago
|
Attachment #146204 -
Flags: superreview?(bryner)
Attachment #146204 -
Flags: superreview+
Attachment #146204 -
Flags: review?(bryner)
Attachment #146204 -
Flags: review+
| Assignee | ||
Updated•22 years ago
|
Attachment #146204 -
Flags: approval1.7?
| Assignee | ||
Comment 3•22 years ago
|
||
fixed-on-trunk
| Assignee | ||
Comment 4•22 years ago
|
||
marking FIXED
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 5•22 years ago
|
||
Comment on attachment 146204 [details] [diff] [review]
v1 patch
a=asa (on behalf of drivers) for checkin to 1.7
Attachment #146204 -
Flags: approval1.7? → approval1.7+
You need to log in
before you can comment on or make changes to this bug.
Description
•