fixes bug 239644 "FreeBSD build error in nsHostResolver" r+sr=bryner